--- a/team.html
+++ b/team.html
@@ -492,6 +492,25 @@
     <!-- Footer Scripts -->
     <!-- JS | Custom script for all pages -->
     <script src="js/custom.js"></script>
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+    <script>
+        var modal = document.getElementById("imageModal");
+        var modalImg = document.getElementById("img01");
+        var images = document.querySelectorAll('.team .thumb img');
+        images.forEach(function (img) {
+            img.onclick = function () {
+                modal.style.display = "block";
+                modalImg.src = this.src;
+            }
+        });
+        var span = document.getElementsByClassName("close")[0];
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+    </script>
 
 </body>
 
